Fixes the example so an empty container stays visible.

--- a/example/example.css
+++ b/example/example.css
@@ -108,6 +108,7 @@ button:hover {
 .container {
   display: table-cell;
   background-color: rgba(255, 255, 255, 0.2);
+  width: 50%;
 }
 .container:nth-child(odd) {
   background-color: rgba(0, 0, 0, 0.2);
